# koing

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
data/: ngram_model.json
resources/: AppIcon.icns  Info.plist
scripts/: build_app.sh  update_homebrew_tap.sh
src/: config.rs  lib.rs  main.rs
src/core/: converter.rs  hangul_fsm.rs  jamo_mapper.rs  mod.rs  unicode.rs
src/detection/: auto_detect.rs  mod.rs  patterns.rs  validator.rs
src/ngram/: config.rs  keymap.rs  mod.rs  model.rs  syllable_validator.rs  validator.rs
src/platform/: cursor_position.rs  event_tap.rs  input_source.rs  mod.rs  os_version.rs  permissions.rs  text_replacer.rs
src/ui/: indicator.rs  menubar.rs  mod.rs  settings.rs
tests/: integration_tests.rs
tools/ngram-trainer/: README.md  requirements.txt  train.py
